<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@android:drawable/stat_notify_chat"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/menu_others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_set_as"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate_us"
                android:icon="@android:drawable/btn_star"
                android:title="@string/menu_rate_us" />
        </menu>
    </item>

</menu>